# pukara

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: separation.yml
config/: pukara.ini.template
docs/: blueprint.md
docs/plans/: 2026-05-16-schema-extras-and-registration.md  2026-05-16-security-gateway-installation.md
src/pukara/: __init__.py  __main__.py  app.py  auth.py  config.py  decoder.py  deps.py  schema_map.py
src/pukara/routes/: __init__.py  meta.py  query.py  read.py  store.py
tests/: test_data_opacity.py  test_gateway.py  test_gateway_independent.py  test_schema_map.py
